[package]
name = "either-future"
version = "1.0.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2018"
license = "ISC"
homepage = "https://github.com/FSMaxB/rust-either-future"
repository = "https://github.com/FSMaxB/rust-either-future"
keywords = ["future", "either", "no_std"]
description = "An implementation of Future for Either<impl Future, impl Future>."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[dependencies]
either = "1"
futures = {version = "0.1", optional = true, default-features = false}
futures-util = {version = "0.3", optional = true, default-features = false}

[dev-dependencies]
futures = {version = "0.1", default-features = false, features = ["use_std"]}

[features]
default = ["std_future"]
futures01 = ["futures"]
futures03 = ["futures-util"]
std_future = []
