[package]
name = "either-future"
version = "2.0.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2018"
license = "ISC"
homepage = "https://github.com/FSMaxB/rust-either-future"
repository = "https://github.com/FSMaxB/rust-either-future"
keywords = ["future", "either", "no_std"]
description = "An implementation of Future for Either<impl Future, impl Future>."
readme = "README.md"
rust-version = "1.41.0"

[dependencies]
either = "1"
